[tool.poetry]
name = "ecw-demo-auth"
version = "0.1.0"
description = ""
authors = ["adamyala <adamkyala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
